--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "deploy:dev": "better-npm-run deploy:dev",
     "deploy:prod": "better-npm-run deploy:prod",
     "codecov": "cat coverage/*/lcov.info | codecov",
-    "postinstall" : "npm run deploy:prod"
+    "postinstall": "npm run deploy:prod"
   },
   "betterScripts": {
     "compile": {
@@ -98,6 +98,8 @@
     "normalize.css": "^4.1.1",
     "postcss-loader": "^0.13.0",
     "react": "^15.0.0",
+    "react-bootstrap": "^0.30.5",
+    "react-burger-menu": "^1.10.8",
     "react-dom": "^15.0.0",
     "react-redux": "^4.4.5",
     "react-router": "^2.8.0",
@@ -136,8 +138,10 @@
     "karma-phantomjs-launcher": "^1.0.2",
     "karma-webpack-with-fast-source-maps": "^1.9.2",
     "mocha": "^3.0.1",
+    "moment": "^2.15.1",
     "nodemon": "^1.10.2",
     "phantomjs-prebuilt": "^2.1.12",
+    "radium": "^0.18.1",
     "react-addons-test-utils": "^15.0.0",
     "redbox-react": "^1.2.10",
     "sinon": "^1.17.5",
