--- a/package.json
+++ b/package.json
@@ -115,6 +115,7 @@
   "devDependencies": {
     "babel-core": "^6.17.0",
     "babel-eslint": "^6.0.0-beta.6",
+    "babel-plugin-add-module-exports": "^0.2.1",
     "babel-plugin-istanbul": "^2.0.1",
     "chai": "^3.4.1",
     "chai-as-promised": "^5.3.0",
@@ -141,7 +142,6 @@
     "moment": "^2.15.1",
     "nodemon": "^1.10.2",
     "phantomjs-prebuilt": "^2.1.12",
-    "radium": "^0.18.1",
     "react-addons-test-utils": "^15.0.0",
     "redbox-react": "^1.2.10",
     "sinon": "^1.17.5",
