--- a/package.json
+++ b/package.json
@@ -128,7 +128,7 @@
     "eslint-config-standard": "^6.0.0",
     "eslint-config-standard-react": "^4.0.0",
     "eslint-plugin-babel": "^3.2.0",
-    "eslint-plugin-promise": "^2.0.0",
+    "eslint-plugin-promise": "^3.3.1",
     "eslint-plugin-react": "^6.0.0",
     "eslint-plugin-standard": "^2.0.0",
     "express": "^4.14.0",
@@ -142,6 +142,7 @@
     "moment": "^2.15.1",
     "nodemon": "^1.10.2",
     "phantomjs-prebuilt": "^2.1.12",
+    "radium": "^0.18.1",
     "react-addons-test-utils": "^15.0.0",
     "redbox-react": "^1.2.10",
     "sinon": "^1.17.5",
