--- a/package.json
+++ b/package.json
@@ -117,6 +117,7 @@
     "babel-eslint": "^6.0.0-beta.6",
     "babel-plugin-add-module-exports": "^0.2.1",
     "babel-plugin-istanbul": "^2.0.1",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.18.0",
     "chai": "^3.4.1",
     "chai-as-promised": "^5.3.0",
