--- a/package.json
+++ b/package.json
@@ -97,6 +97,7 @@
     "json-loader": "^0.5.4",
     "node-sass": "^3.7.0",
     "normalize.css": "^4.1.1",
+    "normalizr": "^3.2.2",
     "postcss-loader": "^0.13.0",
     "react": "^15.0.0",
     "react-bootstrap": "^0.30.5",
